little scrollbar fix

--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ a:visited {
     text-align: center;
     background: none;
     white-space: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 @media (max-aspect-ratio: 1/1) {
